Implemented opcode in the VM and ConsensusRules

--- a/rskj-core/src/main/resources/config/testnet.conf
+++ b/rskj-core/src/main/resources/config/testnet.conf
@@ -23,6 +23,7 @@ blockchain.config {
         rskip119 = secondFork,
         rskip120 = secondFork,
         rskip123 = secondFork,
+        rskip125 = secondFork,
         rskip126 = secondFork
     }
 }
